decodes username correctly